force-app/main/default/objects/Opportunity/fields/Commodity_HCDM__c.field-meta.xml
<CustomField>
    <fullName>Commodity_HCDM__c</fullName>
    <label>Commodity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>Biofuels</fullName>
            </value>
            <value>
                <fullName>CSO Tickets</fullName>
            </value>
            <value>
                <fullName>Environmental Products</fullName>
            </value>
            <value>
                <fullName>Fuel oil</fullName>
            </value>
            <value>
                <fullName>IGO</fullName>
            </value>
            <value>
                <fullName>Jet</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>MGO</fullName>
            </value>
            <value>
                <fullName>Mogas</fullName>
            </value>
            <value>
                <fullName>GTL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>