force-app/main/default/objects/Opportunity/fields/Commodity_Type__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Type__c</fullName>
    <label>Commodity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Crude Basis</fullName>
            </value>
            <value>
                <fullName>Ethanol</fullName>
            </value>
            <value>
                <fullName>Fuel Oil</fullName>
            </value>
            <value>
                <fullName>G C Diesel</fullName>
            </value>
            <value>
                <fullName>Jet</fullName>
            </value>
            <value>
                <fullName>MB Propane</fullName>
            </value>
            <value>
                <fullName>Nat Gas Basis</fullName>
            </value>
            <value>
                <fullName>NYMEX Crude</fullName>
            </value>
            <value>
                <fullName>NYMEX Gasoline</fullName>
            </value>
            <value>
                <fullName>NYMEX Heating Oil</fullName>
            </value>
            <value>
                <fullName>NYMEX Nat Gas</fullName>
            </value>
            <value>
                <fullName>P+ Posting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>