force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <description>Who did we lose or compete with to do this deal</description>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Oil Major</fullName>
            </value>
            <value>
                <fullName>Small oil companies</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other Financial organisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>