force-app/main/default/objects/Opportunity/fields/Conco_Standard_Fee_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Conco_Standard_Fee_per_Unit__c</fullName>
    <label>Conco Standard Fee per Unit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>