force-app/main/default/objects/Opportunity/fields/Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Confirmation__c</fullName>
    <description>Customer Confirmation</description>
    <label>Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>