force-app/main/default/objects/Opportunity/fields/Contact_name__c.field-meta.xml
<CustomField>
    <fullName>Contact_name__c</fullName>
    <label>Contact name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>