force-app/main/default/objects/Opportunity/fields/Contingent_credit__c.field-meta.xml
<CustomField>
    <fullName>Contingent_credit__c</fullName>
    <label>Contingent credit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>