force-app/main/default/objects/Opportunity/fields/Contingesy_test_Meera__c.field-meta.xml
<CustomField>
    <fullName>Contingesy_test_Meera__c</fullName>
    <formula>Account.Contingent_Credit__c*1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MEERA TEST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>