force-app/main/default/objects/Opportunity/fields/Contract_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Confirmed</label>
    <type>Checkbox</type>
</CustomField>