force-app/main/default/objects/Opportunity/fields/Contract_Months_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Contract_Months_Remaining__c</fullName>
    <description>This is the months that are</description>
    <formula>IF( Start_Date__c -  TODAY() &lt;0,0, ROUND((CloseDate - TODAY())/30,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for MOA - How many months is this contract</inlineHelpText>
    <label>Contract Months Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>