force-app/main/default/objects/Opportunity/fields/Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner__c</fullName>
    <label>Contract Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RMS</fullName>
            </value>
            <value>
                <fullName>STASCO</fullName>
            </value>
            <value>
                <fullName>SIETCO</fullName>
            </value>
            <value>
                <fullName>Brokers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>