force-app/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>The start date for the contract that is the objective of the opportunity.</description>
    <inlineHelpText>Start date of the contract that the opp. relates to.</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>