force-app/main/default/objects/Opportunity/fields/Contract_Vol_unit__c.field-meta.xml
<CustomField>
    <fullName>Contract_Vol_unit__c</fullName>
    <label>Contract Vol. unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barrels</fullName>
            </value>
            <value>
                <fullName>Gallons</fullName>
            </value>
            <value>
                <fullName>Tonnes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>