force-app/main/default/objects/Opportunity/fields/Contract_Volume_2_test__c.field-meta.xml
<CustomField>
    <fullName>Contract_Volume_2_test__c</fullName>
    <description>Testing Inbar and Meera</description>
    <label>Contract Volume 2(test)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>