force-app/main/default/objects/Opportunity/fields/Contract_Volume__c.field-meta.xml
<CustomField>
    <fullName>Contract_Volume__c</fullName>
    <label>Contract Volume</label>
    <length>266</length>
    <type>LongTextArea</type>
</CustomField>