force-app/main/default/objects/Opportunity/fields/Cost_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Cost_Contribution__c</fullName>
    <description>WONA = world outside North america</description>
    <label>Cost Contribution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No - US</fullName>
            </value>
            <value>
                <fullName>No - WONA</fullName>
            </value>
            <value>
                <fullName>Yes - US</fullName>
            </value>
            <value>
                <fullName>Yes - WONA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>