force-app/main/default/objects/Opportunity/fields/Cost_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Cost_Estimate__c</fullName>
    <description>Estimate of total review cost, including subsequent actions</description>
    <label>Cost Estimate</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>