force-app/main/default/objects/Opportunity/fields/Cost_HCDM__c.field-meta.xml
<CustomField>
    <fullName>Cost_HCDM__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>