force-app/main/default/objects/Opportunity/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>NE: Austria</fullName>
            </value>
            <value>
                <fullName>NE: Belgium</fullName>
            </value>
            <value>
                <fullName>NE: Chile</fullName>
            </value>
            <value>
                <fullName>NE: China</fullName>
            </value>
            <value>
                <fullName>NE: Czech Republic</fullName>
            </value>
            <value>
                <fullName>NE: Denmark</fullName>
            </value>
            <value>
                <fullName>NE: Finland</fullName>
            </value>
            <value>
                <fullName>NE: France</fullName>
            </value>
            <value>
                <fullName>NE: Guatemala</fullName>
            </value>
            <value>
                <fullName>NE: Hong Kong</fullName>
            </value>
            <value>
                <fullName>NE: Ireland</fullName>
            </value>
            <value>
                <fullName>NE: Netherlands</fullName>
            </value>
            <value>
                <fullName>NE: New Zealand</fullName>
            </value>
            <value>
                <fullName>NE: Norway</fullName>
            </value>
            <value>
                <fullName>NE: Philippines</fullName>
            </value>
            <value>
                <fullName>NE: Singapore</fullName>
            </value>
            <value>
                <fullName>NE: Switzerland</fullName>
            </value>
            <value>
                <fullName>NE: Thailand</fullName>
            </value>
            <value>
                <fullName>Papua New-Guinea</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
            <value>
                <fullName>United Arab Emirates</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>