force-app/main/default/objects/Opportunity/fields/Credit_Limit_EUR__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_EUR__c</fullName>
    <label>Credit Limit (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>