force-app/main/default/objects/Opportunity/fields/Credit_Person_Trained__c.field-meta.xml
<CustomField>
    <fullName>Credit_Person_Trained__c</fullName>
    <description>This is a list from credit of people who are trained. Pick the one you want to send this PFE application.
It is not B2B RM&apos;s  responsibility to check this but for our information.</description>
    <inlineHelpText>This is a list from credit of people who are trained. Pick the one you want to send this PFE application.
It is not B2B RM&apos;s  responsibility to check this but for our information.</inlineHelpText>
    <label>Credit Person Trained</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aakash Modi</fullName>
            </value>
            <value>
                <fullName>Agnes Estopo</fullName>
            </value>
            <value>
                <fullName>Agnes Toth</fullName>
            </value>
            <value>
                <fullName>Alexandra Borisova</fullName>
            </value>
            <value>
                <fullName>Alex Carneiro</fullName>
            </value>
            <value>
                <fullName>Alexis Theodoulidis</fullName>
            </value>
            <value>
                <fullName>Allan Pereira</fullName>
            </value>
            <value>
                <fullName>Allan Sondergaard</fullName>
            </value>
            <value>
                <fullName>Alona Tugumisirize</fullName>
            </value>
            <value>
                <fullName>Anders Kjoes</fullName>
            </value>
            <value>
                <fullName>Andrew Ho</fullName>
            </value>
            <value>
                <fullName>Andrew McKenzie</fullName>
            </value>
            <value>
                <fullName>Anna Corneliusson</fullName>
            </value>
            <value>
                <fullName>Annette Collomb-Noordzij</fullName>
            </value>
            <value>
                <fullName>Anya Jirachitsumpun</fullName>
            </value>
            <value>
                <fullName>Asha Shah</fullName>
            </value>
            <value>
                <fullName>Ashley Blakely</fullName>
            </value>
            <value>
                <fullName>Axel Oelckers</fullName>
            </value>
            <value>
                <fullName>Bas Ammerlaan</fullName>
            </value>
            <value>
                <fullName>Bjorn Blank</fullName>
            </value>
            <value>
                <fullName>Bjorn Skaugvold</fullName>
            </value>
            <value>
                <fullName>Brenda Westren</fullName>
            </value>
            <value>
                <fullName>Brian Leung</fullName>
            </value>
            <value>
                <fullName>Bruno Pandiani</fullName>
            </value>
            <value>
                <fullName>Bruno Pandolfi</fullName>
            </value>
            <value>
                <fullName>Carine Lo Ricco</fullName>
            </value>
            <value>
                <fullName>Chris Roeland</fullName>
            </value>
            <value>
                <fullName>Chullawach Darongkamas</fullName>
            </value>
            <value>
                <fullName>Cindy Liao</fullName>
            </value>
            <value>
                <fullName>David Fisher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>