force-app/main/default/objects/Opportunity/fields/Currency_value__c.field-meta.xml
<CustomField>
    <fullName>Currency_value__c</fullName>
    <inlineHelpText>This is the hedge price in the foreign currency</inlineHelpText>
    <label>Currency value</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>