force-app/main/default/objects/Opportunity/fields/Current_issue__c.field-meta.xml
<CustomField>
    <fullName>Current_issue__c</fullName>
    <description>Description of the issue to be resolved next</description>
    <label>Current issue</label>
    <length>30</length>
    <type>Text</type>
</CustomField>