force-app/main/default/objects/Opportunity/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <formula>if(Year__c=2016, Total_Margin__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>