force-app/main/default/objects/Opportunity/fields/Customer_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Confirmation</label>
    <type>Checkbox</type>
</CustomField>