force-app/main/default/objects/Opportunity/fields/Customer_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice_No__c</fullName>
    <label>Customer Invoice No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>