force-app/main/default/objects/Opportunity/fields/Customer_Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice_Value__c</fullName>
    <formula>IF( CO2_Customer_Buy_Sell__c = &quot;Buy&quot;,( CO2_Number_of_allowances__c *  CO2_Price_to_Customer__c ),-(CO2_Number_of_allowances__c *  CO2_Price_to_Customer__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Invoice Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>