force-app/main/default/objects/Opportunity/fields/Date_of_Credit_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Credit_Approval__c</fullName>
    <label>Date of Credit Approval</label>
    <type>Date</type>
</CustomField>