force-app/main/default/objects/Opportunity/fields/Date_of_last_action__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_action__c</fullName>
    <description>When was the last action taken on this account setup?</description>
    <label>Date of last action</label>
    <type>Date</type>
</CustomField>