force-app/main/default/objects/Opportunity/fields/Date_of_opinion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_opinion__c</fullName>
    <label>Date of opinion</label>
    <type>Date</type>
</CustomField>