force-app/main/default/objects/Opportunity/fields/Deal_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Deal_Breakdown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Breakdown</label>
    <type>Checkbox</type>
</CustomField>