force-app/main/default/objects/Opportunity/fields/Deal_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Deal_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Confirmation</label>
    <type>Checkbox</type>
</CustomField>