force-app/main/default/objects/Opportunity/fields/Deal_Group_2__c.field-meta.xml
<CustomField>
    <fullName>Deal_Group_2__c</fullName>
    <label>Deal Group 2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>