force-app/main/default/objects/Opportunity/fields/Deal_Group__c.field-meta.xml
<CustomField>
    <fullName>Deal_Group__c</fullName>
    <label>Deal Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1110523</fullName>
            </value>
            <value>
                <fullName>1110496</fullName>
            </value>
            <value>
                <fullName>2424754</fullName>
            </value>
            <value>
                <fullName>2044040</fullName>
            </value>
            <value>
                <fullName>2045381</fullName>
            </value>
            <value>
                <fullName>4218790</fullName>
            </value>
            <value>
                <fullName>4218792</fullName>
            </value>
            <value>
                <fullName>3595652</fullName>
            </value>
            <value>
                <fullName>4918874</fullName>
            </value>
            <value>
                <fullName>1081547</fullName>
            </value>
            <value>
                <fullName>908106</fullName>
            </value>
            <value>
                <fullName>2424753</fullName>
            </value>
            <value>
                <fullName>1222783</fullName>
            </value>
            <value>
                <fullName>1222866</fullName>
            </value>
            <value>
                <fullName>4622048</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>