force-app/main/default/objects/Opportunity/fields/Deal_Within_Marketer_s_Limits__c.field-meta.xml
<CustomField>
    <fullName>Deal_Within_Marketer_s_Limits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Within Marketer&apos;s Limits</label>
    <type>Checkbox</type>
</CustomField>