force-app/main/default/objects/Opportunity/fields/Delco_Additional_Margin_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Delco_Additional_Margin_per_Unit__c</fullName>
    <label>Delco Additional Margin per Unit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>