force-app/main/default/objects/Opportunity/fields/Delivery_Airport__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Airport__c</fullName>
    <label>Delivery Airport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dublin</fullName>
            </value>
            <value>
                <fullName>Frankfurt Hahn</fullName>
            </value>
            <value>
                <fullName>London Gatwick</fullName>
            </value>
            <value>
                <fullName>London Heathrow</fullName>
            </value>
            <value>
                <fullName>London Luton</fullName>
            </value>
            <value>
                <fullName>London Stansted</fullName>
            </value>
            <value>
                <fullName>New York - Newark airport</fullName>
            </value>
            <value>
                <fullName>Paris CDG</fullName>
            </value>
            <value>
                <fullName>Paris Beauvais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>