force-app/main/default/objects/Opportunity/fields/Delivery_Instructions_Sent__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instructions_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Instructions Sent</label>
    <type>Checkbox</type>
</CustomField>