force-app/main/default/objects/Opportunity/fields/Delivery_Location1__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location1__c</fullName>
    <formula>TEXT( Delivery_Location__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Location1</label>
    <type>Text</type>
</CustomField>