force-app/main/default/objects/Opportunity/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <label>Delivery Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_of_Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0.84 Miro</fullName>
            </value>
            <value>
                <fullName>0.94 Coryton – FO 3.5 Rott Barges</fullName>
            </value>
            <value>
                <fullName>0.94 Eastham – FO CIF NWE 3.5</fullName>
            </value>
            <value>
                <fullName>1,Unknown</fullName>
            </value>
            <value>
                <fullName>1.00 Stanlow  – FO Rott Bgs 3.5</fullName>
            </value>
            <value>
                <fullName>1.399 (FO380) + 2.9526 (GO0.5) + 31</fullName>
            </value>
            <value>
                <fullName>1.399* FO380 – 2.9526* GO 0.5 + 32 (TGU) + 43 (TGU)</fullName>
            </value>
            <value>
                <fullName>42--Shell Canada Products</fullName>
            </value>
            <value>
                <fullName>Amsterdam</fullName>
            </value>
            <value>
                <fullName>Antwerp</fullName>
            </value>
            <value>
                <fullName>Berre 1.510 Low FOB Med  - 0.460 High CIF Med</fullName>
            </value>
            <value>
                <fullName>Berre Hard Pen 1.0 * 3.5% FO FOB Rotterdam barges (High)</fullName>
            </value>
            <value>
                <fullName>Berre Soft pen 3.5 FO FOB Med High</fullName>
            </value>
            <value>
                <fullName>Bitumen; (1.399 FO380 - 2.9526 GO 0.5) + 182</fullName>
            </value>
            <value>
                <fullName>Bitumen; 1.399(Sing 380) FO - 2.9526 (Sing 0.5) GO + 15</fullName>
            </value>
            <value>
                <fullName>Bitumen; 1.399 (Sing 380) FO - 2.9526 (Sing 0.5) GO + 35</fullName>
            </value>
            <value>
                <fullName>Bitumen; 1.399 (Sing 380) FO - 2.9526 (Sing 0.5) GO + 45</fullName>
            </value>
            <value>
                <fullName>Bitumen; 1.399* FO380 -2.9526 *GO0.5 +35</fullName>
            </value>
            <value>
                <fullName>Bitumen; 1.399* FO 380- 2.9526* GO0.5 + 38</fullName>
            </value>
            <value>
                <fullName>Bitumen; 1.399* FO380 -2.9526* GO0.5+42</fullName>
            </value>
            <value>
                <fullName>Bitumen; 1.399* FO380 -2.9526 * GO0.5 +50+55</fullName>
            </value>
            <value>
                <fullName>CRC Litvinov Hard Pen 0.59 * 3.5% FO FOB Rotterdam Barges</fullName>
            </value>
            <value>
                <fullName>CRC Litvinov Hard Pen 0.61 * 3.5% FO FOB Rotterdam Barges</fullName>
            </value>
            <value>
                <fullName>CRC Litvinov Hard Pen 0.76 * 3.5% FO FOB Rotterdam Barges</fullName>
            </value>
            <value>
                <fullName>CRC Litvinov Hard Pen 0.81 * 3.5% FO FOB Rotterdam Barges</fullName>
            </value>
            <value>
                <fullName>CRC Litvinov Hard Pen 0.84 * 3.5% FO FOB Rotterdam Barges</fullName>
            </value>
            <value>
                <fullName>CRC Litvinov Soft Pen 0.61 * 3.5% FO FOB Rotterdam Barges</fullName>
            </value>
            <value>
                <fullName>CRC Litvinov Soft Pen 0.63 * 3.5% FO FOB Rotterdam Barges</fullName>
            </value>
            <value>
                <fullName>CRC Litvinov Soft Pen 0.78 * 3.5% FO FOB Rotterdam Barges</fullName>
            </value>
            <value>
                <fullName>CRC Litvinov Soft Pen 0.83 * 3.5% FO FOB Rotterdam Barges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>