force-app/main/default/objects/Opportunity/fields/Delivery_month_10__c.field-meta.xml
<CustomField>
    <fullName>Delivery_month_10__c</fullName>
    <label>Delivery month 10</label>
    <type>Date</type>
</CustomField>