force-app/main/default/objects/Opportunity/fields/Delivery_month_11__c.field-meta.xml
<CustomField>
    <fullName>Delivery_month_11__c</fullName>
    <label>Delivery month 11</label>
    <type>Date</type>
</CustomField>