force-app/main/default/objects/Opportunity/fields/Delivery_month_12__c.field-meta.xml
<CustomField>
    <fullName>Delivery_month_12__c</fullName>
    <label>Delivery month 12</label>
    <type>Date</type>
</CustomField>