force-app/main/default/objects/Opportunity/fields/Dex_Ref_2__c.field-meta.xml
<CustomField>
    <fullName>Dex_Ref_2__c</fullName>
    <label>Dex Ref 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>