force-app/main/default/objects/Opportunity/fields/Dex_ref_4__c.field-meta.xml
<CustomField>
    <fullName>Dex_ref_4__c</fullName>
    <label>Dex ref 4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>