force-app/main/default/objects/Opportunity/fields/DEX_ref__c.field-meta.xml
<CustomField>
    <fullName>DEX_ref__c</fullName>
    <label>DEX ref (with 3rd party)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>