force-app/main/default/objects/Opportunity/fields/DEX_ref_trading_as_principle_deals__c.field-meta.xml
<CustomField>
    <fullName>DEX_ref_trading_as_principle_deals__c</fullName>
    <label>Internal DEX ref (trading as principle)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>