force-app/main/default/objects/Opportunity/fields/DEX_Reference__c.field-meta.xml
<CustomField>
    <fullName>DEX_Reference__c</fullName>
    <label>DEX Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>