force-app/main/default/objects/Opportunity/fields/Diff_to_Cust_USD_G_10__c.field-meta.xml
<CustomField>
    <fullName>Diff_to_Cust_USD_G_10__c</fullName>
    <label>Diff to Cust USD G 10</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>