force-app/main/default/objects/Opportunity/fields/Discount_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Discount_per_Unit__c</fullName>
    <label>Discount per Unit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>