force-app/main/default/objects/Opportunity/fields/DSX_Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>DSX_Deal_ID__c</fullName>
    <label>DSX Deal ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>