force-app/main/default/objects/Opportunity/fields/dummy__c.field-meta.xml
<CustomField>
    <fullName>dummy__c</fullName>
    <formula>if( Volume__c =0,  Volume_mt__c, Volume__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MT Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>